# universal-json-agent

./: .env.example  .gitignore  LICENSE  README.md  plan1.md  plan3.md  pyproject.toml  sample.json
.github/workflows/: ci.yml  publish.yml
src/json_agent/: __init__.py  server.py
src/json_agent/tools/: advanced_query.py  aggregate.py  explore.py  export.py  introspect.py  load.py  query.py  stats.py  transform.py
src/json_agent/utils/: path_resolver.py  truncation.py
src/universal_json_agent_mcp/: __init__.py  __main__.py  server.py  store.py
src/universal_json_agent_mcp/registrations/: __init__.py  advanced_query.py  aggregate.py  explore.py  export.py  introspect.py  load.py  query.py  stats.py  transform.py
src/universal_json_agent_mcp/tools/: advanced_query.py  aggregate.py  explore.py  export.py  introspect.py  load.py  query.py  stats.py  transform.py
src/universal_json_agent_mcp/utils/: json_types.py  jsonpath_helpers.py  operators.py  path_resolver.py
tests/: conftest.py  test_path_resolver.py  test_server.py  test_store.py  test_truncation.py
tests/test_tools/: test_advanced_query.py  test_aggregate.py  test_explore.py  test_export.py  test_introspect.py  test_load.py  test_query.py  test_stats.py  test_transform.py
web/: __init__.py  agent.py  app.py  config.py  requirements.txt  run.py  schemas.py  tools.py
